--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,13 @@
+.container-padre {
+    margin-top: 3rem;
+    background-color: #595b5a;
+    border: solid, 10px, #f0971c;
+    padding: 20px;
+}
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.container-hijo {
+    font-size: 6rem;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight:900;
+    color: white;
+    }
